[project]
name = "mood-tracking"
description = "A simple mood tracking, written in Flask, using Python and mysql."
version = "0.0.1"
readme = "README.md"
dependencies = [
    "Flask >= 3.1.0",
    "python-dotenv >= 1.0.0",
    "Flask-SQLAlchemy >= 3.1.1",
    "PyJWT >= 2.10.1",
    "psycopg2-binary >= 2.9.0"
]